--- a/ingresar.html
+++ b/ingresar.html
@@ -16,7 +16,7 @@
 
     <section class="arriba">
         <a href="index.html"> <img src="img/regresar.webp" alt="" height="30px" width="30px"></a>
-    <a href="contacto.html" class="Registrarse"> Registrarse</a>
+    <a href="registrarse.html" class="Registrarse"> Registrarse</a>
 
     </section>
     <section class="ingresar">
