--- a/portafolio.html
+++ b/portafolio.html
@@ -29,7 +29,7 @@
         <li><a href="acerca.html">Acerca de</a></li>
         <li><a href="">Servicios</a></li>
         <li><a href="portafolio.html">Portafolio</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
+        <li><a href="registrarse.html">registrarse</a></li>
     </ul>
 </nav>
 <section class="principalPortafolio">
@@ -88,8 +88,7 @@
 
 <footer>
     <div>
-        <img src="img/pie de pagina 2.png" alt="" width="100px" height="60px">
-
+        <h1 style="color: rgb(64, 0, 173);">viste tu estilo, inspira tu mundo </h1>
     </div>
     <div>
         <h1 style="color: white;">www.zapatos.com</h1>
