--- a/registrarse.html
+++ b/registrarse.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="estilosAcerca.CSS">
     <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estilosContacto.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
@@ -25,25 +25,29 @@
 </header>
 <nav>
     <ul>
-        <li><a href="index.html">inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
         <li><a href="acerca.html">Acerca de</a></li>
-        <li><a href="">servicios</a></li>
-        <li><a href="portafolio.html">portafolio</a></li>
+        <li><a href="">Servicios</a></li>
+        <li><a href="portafolio.html">Portafolio</a></li>
         <li><a href="registrarse.html">Registrarse</a></li>
     </ul>
 </nav>
-<section class="principalAcerca">
-    <img src="img/fotografia.webp" alt="" width="420px" height="280px">
-    <div class="texto">
-
-        <h1 class="nombre">JENIUSCODE</h1>
-        <P class="dirección">Dirección: calle 86 # 75-16 </P>
-        <p class="telefono">Telefeno: 3028515760</p>
-        <p class="Correo">Correo: jeniuscode2025js@gmail.com</p>
-        <img src="img/pie de pagina 3 gray.png" alt="" width="420px" height="70px" >
+<section class="principalContacto">
+    <section class="contacto">
+        <img src="img/login.png" alt="" width="95px" height="95px" class="login">
+        <form action="">
         
-    </div>
+            <input type="text" placeholder="Nombre" class="cajaTexto">
+            <input type="tel" placeholder="Telefono" class="cajaTexto">
+            <input type="email" placeholder="Email" class="cajaTexto">
+            <input type="password" placeholder="Contraseña" class="cajaTexto">
+            <input type="submit" value="Registrarse" class="botonContacto">
 
+
+
+        </form>
+
+    </section>
 
 
 
