--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
     </ul>
 </nav>
 <section class="principal">
-    <img src="img/fondo zapatilla.avif" alt="" width= "100%" height="600px">
+    <img src="img/fondo 2.png" alt="" width= "100%" height="600px">
 
 
 
@@ -40,15 +40,17 @@
 
 <footer>
     <div>
-        <img src="img/pie de pagina 2.png" alt="" width="100px" height="100px">
+        <a href="https://www.google.com/maps/place/Bochica+II,+Engativ%C3%A1,+Bogot%C3%A1,+Bogota/@4.7153773,-74.1195122,16z/data=!3m1!4b1!4m9!1m2!2m1!1smaps!3m5!1s0x8e3f84b050c78015:0x4cfc74a8524a289a!8m2!3d4.7156635!4d-74.1095424!16s%2Fg%2F1thky99_?entry=ttu&g_ep=EgoyMDI1MDUwNS4wIKXMDSoASAFQAw%3D%3D"><img src="img/pie de pagina 2.png" alt="" width="100px" height="60px"></a>
 
     </div>
     <div>
-        <h1 style="color: white;">www.zapatos.com</h1>
+        <h1 style="color: rgb(64, 0, 173);">viste tu estilo, inspira tu mundo </h1>
 
     </div>
     <div>
-        <img src="img/pie de pagina1 (2).png" alt="" width="200px" height="55px">
+       <a href="https://www.facebook.com/profile.php?id=100011183525502"><img src="img/pie de pagina1 (2).png" alt="" width="200px" height="55px" ></a> 
+        
+        
 
     </div>
 </footer>
