--- a/productos.html
+++ b/productos.html
@@ -28,7 +28,7 @@
         <li><a href="productos.html">Productos</a></li>
         <li><a href="clientes.html">Clientes</a></li>
         <li><a href="ventas.html">Ventas </a></li>
-        <li><a href="">Reportes</a></li>
+        <li><a href="reportes.html">Reportes</a></li>
     </ul>
 </nav>
 <section class="principalProductos">
