--- a/ventas.html
+++ b/ventas.html
@@ -18,7 +18,7 @@
 <h1 class="colortitulo">JS.CODE</h1>
     </div>
     <div class="boton">
-        <a href="ingresar.html"class="botoningresar">INGRESAR</a>
+        <a href="login.html"class="botoningresar">SALIR</a>
     </div>
 
 
